update form loin signin

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="../Assets/themify-icons/themify-icons.css" type="text/css">
     <!-- css file link-->
-    <link rel="stylesheet" href="../SCSS/header.css" type="text/css">
     <link rel="stylesheet" href="../CSS/footer.css" type="text/css">
+    <link rel="stylesheet" href="../SCSS/header.css">
     <link rel="stylesheet" href="../CSS/content.css" type="text/css">
     <link rel="stylesheet" href="../CSS/slider.css" type="text/css">
     <link rel="stylesheet" href="../CSS/responsive.css" type="text/css">
@@ -81,8 +81,8 @@
                                         aria-labelledby="headingOne" data-bs-parent="#accordionParent">
                                         <div class="accordion-body">
                                             <ul class="list-unstyled">
-                                                <li><a href="#">Cài đặt thông tin</li></a>
-                                                <li><a href="#">Đăng xuất</li></a>
+                                                <li><a href="#">Cài đặt thông tin</a></li>
+                                                <li><a href="../HTML/formSignLog.html">Đăng xuất</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -273,9 +273,9 @@
                         <h4>Tài khoản</h4>
                         <ul class="drop-list-item list-unstyled">
                             <li><a href="#"><i class="ti-settings"
-                                        style="font-size: 18px;top: 5;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</li></a>
-                            <li><a href="#"><i class="fa fa-sign-out"
-                                        style="font-size: 18px;top:52;"></i>&nbsp;&nbsp;&nbsp;Đăng xuất</li></a>
+                                        style="font-size: 18px;top: 5;"></i>&nbsp;&nbsp;&nbsp;Cài đặt thông tin</a></li>
+                            <li><a href="../HTML/formSignLog.html"><i class="fa fa-sign-out"
+                                        style="font-size: 18px;top:52;"></i>&nbsp;&nbsp;&nbsp;Đăng xuất</a></li>
                         </ul>
                     </div>
                 </div>
