--- a/HTML/index.html
+++ b/HTML/index.html
@@ -587,26 +587,22 @@
                     <div class="col-md-12">
                         <div class="carousel-indicators index-0 caroul-control">
                             <div>
-                                <h3>Iphone 14 Pro Max giảm sốc</h3>
-                                <p class="text-white fs-5">Giảm đến 8 triệu đồng</p>
+                                <h3 class="fs-4 text-white">Iphone 14 Pro Max giảm sốc</h3>
                                 <button type="button" data-bs-target="#carouselSilderAds" data-bs-slide-to="0"
                                     class="active" aria-current="true" aria-label="Slide 1"></button>
                             </div>
                             <div>
-                                <h3>MacBook Air M2</h3>
-                                <p class="text-white fs-5">Hỗ trợ trả góp 0%</p>
+                                <h3 class="text-white fs-4">Galaxy A giảm 3.5 triệu</h3>
                                 <button type="button" data-bs-target="#carouselSilderAds" data-bs-slide-to="1"
                                     aria-label="Slide 2"></button>
                             </div>
                             <div>
-                                <h3>Laptop Dell XPS 13 Plus</h3>
-                                <p class="text-white fs-5">Ưu đãi lên tới 2.5 triệu đỒng</p>
+                                <h3 class="text-white fs-4">Mua Robot ECOVAC T20 Ommi</h3>
                                 <button type="button" data-bs-target="#carouselSilderAds" data-bs-slide-to="2"
                                     aria-label="Slide 3"></button>
                             </div>
                             <div>
-                                <h3>SamSung Z4 Series</h3>
-                                <p class="text-white fs-5">Giảm đến 13.5 triệu đồng</p>
+                                <h3 class="text-white fs-4">Redmi Note 12 Series giảm 3.5 triệu</h3>
                                 <button type="button" data-bs-target="#carouselSilderAds" data-bs-slide-to="3"
                                     aria-label="Slide 4"></button>
                             </div>
@@ -636,22 +632,22 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-12 p-0">
                             <a href="https://fptshop.com.vn/xiaomi/quat" target="_blank"><img class="ads-item-2"
                                     src="../Assets/images/slider/box-news-ads-1.webp" alt="H2 Quạt Xiaomi T5"
                                     title="H2 Quạt Xiaomi T5"></a>
                         </div>
-                        <div class="col-md-8">
-                            <a href="#" class="ads-title">Công nghệ mang lại hạnh phúc thế nào?</a>
+                        <div class="col-md-8 col-sm-12">
+                            <a href="#" class="ads-title">Công nghệ mang lại hạnh phúc ra sao?</a>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-4 p-0">
+                        <div class="col-md-4 p-0 col-sm-12">
                             <a href="https://fptshop.com.vn/xiaomi/quat" target="_blank"><img class="ads-item-2"
                                     src="../Assets/images/slider/box-news-ads-1.webp" alt="H2 Quạt Xiaomi T5"
                                     title="H2 Quạt Xiaomi T5"></a>
                         </div>
-                        <div class="col-md-8">
+                        <div class="col-md-8 col-sm-12">
                             <a href="#" class="ads-title">Giảm thêm 500.000đ khi mua Samsung</a>
                         </div>
                     </div>
