--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,7 @@
     <title>Fptshop.com.vn | Điện thoại, Laptop, Tablets, Phụ kiện chính hãng giá tốt nhất</title>
     <link href="../Assets/images/logo/fpt-logo-mini.png" rel="icon" type="image/x-icon">
     <!-- icon -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../Assets/themify-icons/themify-icons.css" type="text/css">
     <!-- css file link-->
     <link rel="stylesheet" href="../CSS/footer.css" type="text/css">
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="../CSS/cart-form.css" />
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-element-bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!-- bootstrap 5-->
     <link href="../Assets/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../Assets/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
@@ -166,15 +166,15 @@
                                     </div>
                                 </div>
                                 <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingThree">
+                                    <h2 class="accordion-header" id="headingFour">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseThree" aria-expanded="true"
-                                            aria-controls="collapseThree">
+                                            data-bs-target="#collapseFour" aria-expanded="true"
+                                            aria-controls="collapseFour">
                                             Sản phẩm
                                         </button>
                                     </h2>
-                                    <div id="collapseThree" class="accordion-collapse collapse"
-                                        aria-labelledby="headingThree" data-bs-parent="#accordionParent">
+                                    <div id="collapseFour" class="accordion-collapse collapse"
+                                        aria-labelledby="headingFour" data-bs-parent="#accordionParent">
                                         <div class="accordion-body">
                                             <ul class="list-unstyled">
                                                 <li><a href="#">Điện thoại</a></li>
@@ -191,15 +191,15 @@
                                     </div>
                                 </div>
                                 <div class="accordion-item">
-                                    <h2 class="accordion-header" id="headingFour">
+                                    <h2 class="accordion-header" id="headingFive">
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseFour" aria-expanded="true"
-                                            aria-controls="collapseFour">
+                                            data-bs-target="#collapseFive" aria-expanded="true"
+                                            aria-controls="collapseFive">
                                             Thanh toán
                                         </button>
                                     </h2>
-                                    <div id="collapseFour" class="accordion-collapse collapse"
-                                        aria-labelledby="headingFour" data-bs-parent="#accordionParent">
+                                    <div id="collapseFive" class="accordion-collapse collapse"
+                                        aria-labelledby="headingFive" data-bs-parent="#accordionParent">
                                         <div class="accordion-body">
                                             <ul class="list-unstyled">
                                                 <li><a href="#">Cài đặt thanh toán</a></li>
@@ -225,13 +225,17 @@
                 <!-- contact-mobile -->
                 <div class="contact-mobile-header">
                     <div class="contact-mobile">
-                        Gọi miễn phí <br>
-                        <span class="fw-bold">1800 6601</span>
+                        <a href="tel: 1800 6601" class="text-white">
+                            Gọi miễn phí <br>
+                            <span class="fw-bold">1800 6601</span>
+                        </a>
                     </div>
                     <div class="shopping-cart-mobile">
-                        <i class="ti-shopping-cart">
-                            <p class="product-mount">0</p>
-                        </i>
+                        <a href="../HTML/cart-form.html" onclick="sessionData()" class="text-white">
+                            <i class="ti-shopping-cart">
+                                <p class="product-mount">0</p>
+                            </i>
+                        </a>
                     </div>
                     <div class="clearfix"></div>
                 </div>
@@ -252,8 +256,10 @@
                         </ul>
                     </div>
                     <div class="cus-abate" title="Phương thức thanh toán">
-                        <i class="ti-credit-card"></i>
-                        <h4>Thanh toán</h4>
+                        <a href="#" class=" text-white">
+                            <i class="ti-credit-card"></i>
+                            <h4>Thanh toán</h4>    
+                        </a>
                     </div>
                     <div class="cus-shopping-cart">
                         <a href="../HTML/cart-form.html" onclick="sessionData()" class="text-white">
@@ -460,7 +466,7 @@
                                                 alt=""></a>
                                     </div>
                                     <div class="descript-top-sell">
-                                        <a href="#">iPhone 14 Pro Max
+                                        <a href="../HTML/detailsProduct.html">iPhone 14 Pro Max
                                             128GB</a>
                                         <p>27.190.000 <span style="text-decoration: underline;">đ</span></p>
                                     </div>
@@ -1050,20 +1056,20 @@
                                     ty</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/ho-tro/chinh-sach-bao-mat" title="">Chính sách bảo mật</a>
+                                <a href="https://fptshop.com.vn/ho-tro/chinh-sach-bao-mat" title="">Chính sách bảo mật</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/tos" title="">Quy chế hoạt động</a>
+                                <a href="https://fptshop.com.vn/tos" title="">Quy chế hoạt động</a>
                             </li>
                             <li>
                                 <a href="http://hddt.fptshop.com.vn/" title="">Kiểm tra hóa đơn điện tử</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/kiem-tra-bao-hanh?tab=thong-tin-bao-hanh" title="">Tra cứu
+                                <a href="https://fptshop.com.vn/kiem-tra-bao-hanh?tab=thong-tin-bao-hanh" title="">Tra cứu
                                     thông tin bảo hành</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/ho-tro/cau-hoi-thuong-gap"
+                                <a href="https://fptshop.com.vn/ho-tro/cau-hoi-thuong-gap"
                                     title="Câu hỏi thường gặp mua hàng">Câu hỏi thường gặp mua hàng</a>
                             </li>
                         </ul>
@@ -1078,16 +1084,16 @@
                     </div>
                     <div class="col-md-2 col-sm-6 text-left">
                         <ul class="ft-list">
-                            <li><a href="//vieclam.fptshop.com.vn/">Tin tuyển dụng</a></li>
+                            <li><a href="https://vieclam.fptshop.com.vn/">Tin tuyển dụng</a></li>
                             <li>
-                                <a href="//fptshop.com.vn/tin-tuc/Tin-khuyen-mai" title="">Tin khuyến mãi</a>
+                                <a href="https://fptshop.com.vn/tin-tuc/Tin-khuyen-mai" title="">Tin khuyến mãi</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/ho-tro/huong-dan-mua-hang" title="">Hướng dẫn mua
+                                <a href="https://fptshop.com.vn/ho-tro/huong-dan-mua-hang" title="">Hướng dẫn mua
                                     online</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/tra-gop" title="">Hướng dẫn mua trả góp</a>
+                                <a href="https://fptshop.com.vn/tra-gop" title="">Hướng dẫn mua trả góp</a>
                             </li>
                             <li>
                                 <a href="https://fptshop.com.vn/ho-tro/chinh-sach-tra-gop" title="">Chính sách trả
@@ -1112,17 +1118,17 @@
                     </div>
                     <div class="col-md-2 col-sm-6">
                         <ul class="ft-list">
-                            <li><a href="//fptshop.com.vn/cua-hang">Hệ thống cửa hàng</a></li>
+                            <li><a href="https://fptshop.com.vn/cua-hang">Hệ thống cửa hàng</a></li>
                             <li>
                                 <a href="https://fptshop.com.vn/ho-tro/chinh-sach-doi-san-pham" title="">Chính sách
                                     đổi
                                     trả</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/ho-tro/chinh-sach-bao-hanh" title="">Hệ thống bảo hành</a>
+                                <a href="https://fptshop.com.vn/ho-tro/chinh-sach-bao-hanh" title="">Hệ thống bảo hành</a>
                             </li>
                             <li>
-                                <a href="//fptshop.com.vn/ho-tro/gioi-thieu-may-doi-tra" title="">Giới thiệu máy đổi
+                                <a href="https://fptshop.com.vn/ho-tro/gioi-thieu-may-doi-tra" title="">Giới thiệu máy đổi
                                     trả</a>
                             </li>
 
