--- a/HTML/detailsProduct.html
+++ b/HTML/detailsProduct.html
@@ -1123,7 +1123,7 @@
             </div>
             <div class="row">
                 <h2 class="text-left px-5">Câu hỏi thường gặp</h2>
-                <div class="accordion" id="accordionExample">
+                <div class="accordion" id="accordionHotQuestion">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button fs-3" type="button" data-bs-toggle="collapse"
@@ -1133,7 +1133,7 @@
                             </button>
                         </h2>
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
-                            data-bs-parent="#accordionExample">
+                            data-bs-parent="#accordionHotQuestion">
                             <div class="accordion-body text-left fs-4">
                                 Dù tích hợp thêm rất nhiều tính năng mới nhưng thời lượng pin của iPhone 14 Pro vẫn rất
                                 tuyệt vời. iPhone 14 Pro có thể xem video trong tới 29 giờ liên tục, tương đương với
@@ -1150,7 +1150,7 @@
                             </button>
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
-                            data-bs-parent="#accordionExample">
+                            data-bs-parent="#accordionHotQuestion">
                             <div class="accordion-body text-left fs-4">
 
                                 iPhone 14 Pro sẽ khiến những người khó tính nhất phải hài lòng nhờ chip Apple A16
@@ -1169,7 +1169,7 @@
                             </button>
                         </h2>
                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
-                            data-bs-parent="#accordionExample">
+                            data-bs-parent="#accordionHotQuestion">
                             <div class="accordion-body text-left fs-4">
                                 Hệ thống camera TrueDepth trên mặt trước iPhone 14 Pro được cải tiến khẩu độ lên mức
                                 F/1.9 để chụp thiếu sáng tốt hơn. Ngoài ra, công nghệ AutoFocus tự động bắt nét sẽ tối
