--- a/HTML/index.html
+++ b/HTML/index.html
@@ -48,7 +48,7 @@
                                         <button class="accordion-button" type="button" data-bs-toggle="collapse"
                                             data-bs-target="#collapseZero" aria-expanded="true"
                                             aria-controls="collapseZero">
-                                            Thông tin hot
+                                            Thông tin chuẩn 
                                         </button>
                                     </h2>
                                     <div id="collapseZero" class="accordion-collapse collapse"
